# AI-Customer-Support-Platform

./: .gitignore  README.md  frontend.py  pyproject.toml
LangChainAI/: .env.local  __init__.py  chains.py  config.py  db.py  embeddings.py  hitl_middleware.py  knowledge.py  llm.py  logging__.py  memory_manager.py  sample_data.py  sample_run.py  schemas.py  service.py  tools.py  tracking.py  vectorstore.py
LangChainAI/docs/: info.md
LangGraphAI/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  sample_run.py
LangGraphAI/src/deep_agent/: __init__.py  chains.py  config.py  db.py  embeddings.py  graph.py  knowledge.py  llm.py  memory_manager.py  nodes.py  schemas.py  service.py  tools.py  vectorstore.py
LangGraphAI/src/deep_agent/docs/: info.md
LangGraphAI/tests/integration_tests/: test_graph.py
LangGraphAI/tests/unit_tests/: test_configuration.py
