[project]
name = "ai-customer-support-platform"
version = "0.1.0"
description = "AI Customer Support Platform using LangChain/LangGraph for ticket analysis, knowledge retrieval, response drafting, and escalation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "jupyterlab>=4.5.8",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langgraph-cli[inmem]>=0.4.28",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
]
