[project]
name = "ai-customer-support-langgraph"
version = "0.1.0"
description = "LangGraph customer support email handler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.0",
    "langgraph>=1.0.0",
    "langgraph-sdk>=0.1.0",
    "langsmith>=0.8.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.12.0",
    "chromadb>=0.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.10",
    "pytest>=9.0.3",
    "ruff>=0.8.0",
]

[tool.uv.build-backend]
module-name = "deep_agent"
source-include = ["langgraph.json", ".env.example", "Makefile", "src/deep_agent/docs/info.md"]
